--- a/secao2/aula28/index.html
+++ b/secao2/aula28/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exercício 28</title>
-  </head>
-  <body>
-    <section>
-      <h1>O seu número é <span id="numero">0</span></h1>
-    </section>
-    <script src="index.js"></script>
-  </body>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercicios</title>
+</head>
+<body>
+    <h1></h1>
+</body>
 </html>
